# tuime

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: args.rs  colors.rs  config.rs  display.rs  error.rs  fonts.rs  main.rs  text.rs
