[package]
name = "tuime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
anyhow = "1.0.70"
crossterm = { version = "0.26.1", features = ["event-stream"] }
tokio = { version = "1.27.0", features = ["full"] }
futures-timer = "3.0.2"
futures = "0.3.28"
cfonts = "1.1.0"
