[package]
name = "tuime"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
anyhow = "1.0.70"
crossterm = { version = "0.26.1", features = ["event-stream"] }
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3.28"
cfonts = "1.1.0"
clap = { version = "4.2.2", features = ["derive"] }
